<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardNotifView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="7dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="20sp"
        app:cardBackgroundColor="#FFC3A1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:maxLength="50"
                android:paddingTop="16dp"
                android:text="@string/my_notif2"
                android:textColor="@color/notprettywhite"
                android:textSize="15sp"
                android:textStyle="bold"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                />

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:maxLength="100"
                android:paddingStart="25dp"
                android:paddingEnd="10dp"
                android:paddingTop="6.5dp"
                android:paddingBottom="6.5dp"
                android:text="@string/my_notif"
                android:textColor="#514D4D"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="@font/ubuntu_bold"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="20dp"
                android:paddingBottom="7dp"
                android:text="@string/my_notif3"
                android:textColor="#A75D5D"
                android:textSize="11sp" />

        </LinearLayout>



    </androidx.cardview.widget.CardView>

</LinearLayout>