<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/intro"
    tools:context=".HomeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tEmpower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="49dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/teksEmpower"
                android:textAlignment="center"
                android:textColor="#D3756B"
                android:textSize="33sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/teksNote"
                android:textAlignment="center"
                android:textColor="#D3756B"
                android:textSize="17sp"
                android:textStyle="italic" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="339dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/intro_background">


                <TextView
                    android:id="@+id/tGetMyNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center|center_horizontal"
                    android:text="@string/teksGetMyNote"
                    android:textColor="@color/bg"
                    android:textSize="23dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/iPanah"
                    android:layout_width="65dp"
                    android:layout_height="51dp"
                    android:layout_marginStart="278dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/arrow" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>